fix rtl save icon alignment

--- a/static/css/inline-selection.scss
+++ b/static/css/inline-selection.scss
@@ -332,7 +332,7 @@ $very-light-grey: #ededed;
     background-position: 8px center;
   }
   html[dir="rtl"] & {
-    background-position: 65px center;
+    background-position: right 10px center;
   }
   background-repeat: no-repeat;
   background-size: 20px 18px;
